# librid

./: .astylerc  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  context7.json
.forgejo/workflows/: examples.yaml  test.yaml
examples/: CMakeLists.txt  Makefile
examples/auth/: Makefile  README.md  example_auth.c  example_sign.c  example_verify.c  keys.h
examples/auth_page/: Makefile  README.md  example_auth_page.c
examples/basic_id/: Makefile  README.md  basic_id.c  example_basic_id.c
examples/cli/: Makefile  README.md  example_cli.c  rid
examples/generate_system/: Makefile  README.md
examples/generate_system_message/: Makefile  README.md  generate_system_message.c
examples/json/: Makefile  README.md  example_json  example_json.c
examples/location/: Makefile  README.md  example_location.c  location.c
examples/mavlink/: Makefile  README.md  example_mavlink.c
examples/message/: Makefile  README.md  example_message.c  message.c
examples/message_pack/: Makefile  README.md  example_message_pack.c  message_pack  message_pack.c
examples/operator_id/: Makefile  README.md  example_operator_id.c  operator_id.c
examples/parse_system_message/: Makefile  README.md  parse_system_message.c
examples/self_id/: Makefile  README.md  example_self_id.c  self_id.c
examples/system/: Makefile  README.md  example_system.c  system.c
examples/system_message/: Makefile  system_message.c
examples/validate/: Makefile  README.md  example_validate.c
examples/version/: Makefile  README.md  example_version  example_version.c
include/: rid.h
include/rid/: auth.h  auth_data.h  auth_page.h  basic_id.h  header.h  location.h  message.h  message_pack.h  operator_id.h  rid.h  self_id.h  system.h  transport.h  version.h
include/rid/message/: basic_id.h
src/: auth.c  auth_data.c  auth_page.c  basic_id.c  header.c  location.c  message.c  message_pack.c  operator_id.c  self_id.c  system.c  transport.c  version.c
tests/: CMakeLists.txt  Makefile  auth.c  basic_id.c  header.c  location.c  message.c  message_pack.c  operator_id.c  self_id.c  system.c  test_auth.c  test_auth_page.c  test_basic_id.c  test_location.c  test_message.c  test_message_pack.c  test_operator_id.c  test_runner  test_self_id.c  test_system.c  test_transport.c  unit.c  unit.h
