idf_component_register(
    SRCS "src/basic_id.c"
         "src/location.c"
         "src/message.c"
         "src/system.c"
         "src/message_pack.c"
         "src/header.c"
         "src/auth.c"
         "src/auth_page.c"
         "src/operator_id.c"
         "src/self_id.c"
    INCLUDE_DIRS "include"
)
